z-index corrected

--- a/projects/app/src/app/components/app/app.component.css
+++ b/projects/app/src/app/components/app/app.component.css
@@ -18,6 +18,7 @@
       width: calc(100% + 6rem);
       margin: -3rem -3rem 0rem -3rem;
       padding: 1rem 3rem;
+      z-index: 10;
     }
 
     & button {
